# racket_qt

./: .gitignore  .gitmodules  CLAUDE.md  README.md
docs/: ARCHITECTURE.md  BRIEF.md  CHECKPOINT-D.md  HACKING.md  prompt250626_macos.md  report240626.md  report250626.md  report250626_macos.md
examples/: editor.rkt  hello.rkt  input.rkt
qt-shim/: CMakeLists.txt  CMakePresets.json  test-load.rkt
qt-shim/src/: shim.cpp
qt-shim/test/: test-load.rkt
tests/: smoke.rkt
